<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">youssef_s_application</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_game_developmen">Game development</string>
<string name="lbl_vuejs">Vuejs</string>
<string name="msg_ajout_enseignan">ajout enseignant</string>
<string name="lbl_logout">Logout</string>
<string name="msg_learning_remind">Learning reminders</string>
<string name="lbl_enseignant">enseignant</string>
<string name="msg_share_fire_cour">Share Fire course app</string>
<string name="lbl_mahmoud_sayed">Mahmoud Sayed</string>
<string name="lbl_home">Home</string>
<string name="lbl_react_js2">React js
</string>
<string name="lbl_100">/100</string>
<string name="lbl_upload_cours">Upload Cours</string>
<string name="lbl_swift">Swift</string>
<string name="msg_enter_your_name">Enter your name or e-mail</string>
<string name="msg_browser_categor">Browser Category</string>
<string name="lbl_detail_profil">Detail Profil</string>
<string name="lbl_reactjs">Reactjs</string>
<string name="msg_react_js_descri">React js
Description: All can be perfect in math....</string>
<string name="msg_liste_des_tudi">liste des étudiants </string>
<string name="msg_having_trouble">Having trouble logging in?</string>
<string name="msg_mahmoud_gmail_c">mahmoud@gmail.com</string>
<string name="lbl_beginner">Beginner</string>
<string name="lbl_python">Python</string>
<string name="lbl_presence">Presence</string>
<string name="lbl_programming">Programming</string>
<string name="lbl_etudiant">Etudiant</string>
<string name="lbl_12">12</string>
<string name="lbl_about_sinau">About Sinau</string>
<string name="lbl_sign_up">Sign up</string>
<string name="msg_account_setting">Account Settings</string>
<string name="lbl_enseignente">Enseignente</string>
<string name="msg_search_for_a_co">Search for a course...</string>
<string name="lbl_ajout_classe">ajout classe</string>
<string name="lbl_ajout_club">ajout club</string>
<string name="msg_sign_in_with_go">Sign in with Google</string>
<string name="msg_account_securit">Account Security</string>
<string name="msg_vue_js_descript">Vue js
Description: All can be perfect in math....</string>
<string name="lbl_classe">classe</string>
<string name="lbl_support">Support</string>
<string name="lbl_dashboard">Dashboard</string>
<string name="msg_by_sarah_willia">By Sarah William</string>
<string name="lbl_4sae3">4SAE3</string>
<string name="lbl_club">club</string>
<string name="lbl_vue_js2">Vue js
</string>
<string name="msg_learn_from_the">Learn from the leaders in technologies education</string>
<string name="lbl_72_100">72/100</string>
<string name="lbl_etudiant2">etudiant</string>
<string name="lbl_admin">admin</string>
<string name="lbl_sarah_w">Sarah W.</string>
<string name="lbl_login">Login</string>
<string name="msg_javascript_desc">Javascript
Description: All can be perfect in math....</string>
<string name="lbl_reclamation">Reclamation</string>
<string name="lbl_details">Details</string>
<string name="lbl_javascript">Javascript
</string>
<string name="lbl_add">add</string>
<string name="lbl_5_0">5.0</string>
<string name="lbl_72">72</string>
<string name="lbl_notes">Notes</string>
<string name="lbl_password">Password</string>
<string name="lbl_ajout_etudiant">ajout etudiant</string>
<string name="msg_recommended_boo">Recommended Books</string>
<string name="lbl_explore">Explore</string>
<string name="lbl_excel">Excel</string>
<string name="msg_email_notificat">Email notification preferences</string>
<string name="msg_description_al">Description: All can be perfect in math....</string>
<string name="lbl_finance">Finance</string>
<string name="lbl_detail_profile">Detail Profile</string>
<string name="msg_frequently_aske">Frequently asked questions</string>
<string name="lbl_account">Account</string>
</resources>
