<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="authMainVM" type="com.youssefsapplication.app.modules.authmain.data.viewmodel.AuthMainVM"/>
    </data>
    <LinearLayout android:id="@+id/linearAuthmain"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imagePlandetravail"
            android:layout_gravity="start"
            android:layout_height="@dimen/_147pxh"
            android:layout_marginEnd="@dimen/_58pxh"
            android:layout_marginStart="@dimen/_58pxh"
            android:layout_marginTop="@dimen/_36pxv"
            android:layout_width="@dimen/_244pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_plandetravail_147x244}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_plandetravail_147x244"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtLearnfromthe"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_3pxh"
            android:layout_marginTop="@dimen/_41pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{authMainVM.authMainModel.txtLearnfromthe}"
            style="@style/txtDMSansregular16" tools:text="@string/msg_learn_from_the"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnEnterYourNameOrEmail"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_56pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_width="@dimen/_261pxh"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@string/msg_enter_your_name"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline" tools:text="@string/msg_enter_your_name"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnPassword"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_53pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="@dimen/_254pxh"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@string/lbl_password"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_password"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLogin"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_39pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@string/lbl_login" android:textAllCaps="false"
            style="@style/btnGradientRounded_1" tools:text="@string/lbl_login"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSignInWithGoogle"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@string/msg_sign_in_with_go"
            android:textAllCaps="false"
            style="@style/btnGradientRounded_2" tools:text="@string/msg_sign_in_with_go"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtHavingtrouble"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_36pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{authMainVM.authMainModel.txtHavingtrouble}"
            style="@style/txtManroperegular12" tools:text="@string/msg_having_trouble"/>
        <View android:background="@color/gray_103"
            android:id="@+id/lineLineSix"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_2pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_27pxv" android:layout_width="@dimen/_65pxh"/>
        <TextView android:ellipsize="end" android:id="@+id/txtSignup"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{authMainVM.authMainModel.txtSignup}"
            style="@style/txtManroperegular12" tools:text="@string/lbl_sign_up"/>
    </LinearLayout>
</layout>
