<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="enseignantVM" type="com.youssefsapplication.app.modules.enseignant.data.viewmodel.EnseignantVM"/>
    </data>
    <FrameLayout android:id="@+id/frameEnseignant"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnarrowleft"
            android:layout_gravity="bottom|start"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linearRowarrowleft"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageArrowleft"
                        android:layout_height="@dimen/_13pxh"
                        android:layout_marginBottom="@dimen/_4pxv"
                        android:layout_marginTop="@dimen/_5pxv"
                        android:layout_width="@dimen/_17pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrowleft"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTitle"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_102pxh"
                        android:layout_weight="0.85"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:singleLine="true"
                        android:text="@{enseignantVM.enseignantModel.txtTitle}"
                        style="@style/txtFahkwangbold17" tools:text="@string/lbl_dashboard"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowplandetravail"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_59pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imagePlandetravail"
                    android:layout_height="@dimen/_95pxh"
                    android:layout_width="@dimen/_140pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_plandetravail}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_plandetravail"/>
                <LinearLayout android:id="@+id/linearRowellipsesix"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_27pxv"
                    android:layout_marginStart="@dimen/_46pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_weight="0.53"
                    android:layout_width="0dp" android:orientation="horizontal">
                    <FrameLayout android:id="@+id/frameStackellipsesix"
                        android:layout_height="@dimen/_51pxv"
                        android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_51pxh">
                        <View
                            android:background="@drawable/rectangle_gradient_s_light_blue_400_00_c_amber_a200_e_yellow_800_radius_11_855"
                            android:id="@+id/viewEllipseSix"
                            android:layout_gravity="top|center"
                            android:layout_height="@dimen/_23pxh"
                            android:layout_marginBottom="@dimen/_12pxv"
                            android:layout_marginEnd="@dimen/_13pxh"
                            android:layout_marginStart="@dimen/_13pxh"
                            android:layout_marginTop="@dimen/_12pxv" android:layout_width="@dimen/_23pxh"/>
                        <ImageView android:id="@+id/imageEllipseOne"
                            android:layout_gravity="center"
                            android:layout_height="@dimen/_51pxh"
                            android:layout_width="@dimen/_51pxh"
                            android:scaleType="centerCrop"
                            circular="@{true}"
                            imageRes="@{@drawable/img_ellipse1}"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse1"/>
                    </FrameLayout>
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearColumnsarahw"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_15pxh"
                        android:layout_weight="0.64"
                        android:layout_width="0dp" android:orientation="vertical">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtSarahW"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@{enseignantVM.enseignantModel.txtSarahW}"
                            style="@style/txtPromptregular17" tools:text="@string/lbl_sarah_w"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtEnseignente"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@{enseignantVM.enseignantModel.txtEnseignente}"
                            style="@style/txtPromptregular15" tools:text="@string/lbl_enseignente"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:gravity="center_horizontal"
                android:id="@+id/recyclerEnseignant"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_61pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                itemSpace="@{@dimen/_15pxh}" tools:itemCount="2" tools:listitem="@layout/row_enseignant"/>
            <LinearLayout android:id="@+id/linearRowteam"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearColumnteam"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
                    <ImageView android:id="@+id/imageTeam"
                        android:layout_gravity="end"
                        android:layout_height="@dimen/_40pxh"
                        android:layout_marginEnd="@dimen/_56pxh"
                        android:layout_marginStart="@dimen/_56pxh"
                        android:layout_marginTop="@dimen/_23pxv"
                        android:layout_width="@dimen/_40pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_team"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_team"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPresence"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_50pxh"
                        android:layout_marginStart="@dimen/_50pxh"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_width="wrap_content"
                        android:lineSpacingExtra="@dimen/_3pxh"
                        android:singleLine="true"
                        android:text="@{enseignantVM.enseignantModel.txtPresence}"
                        style="@style/txtABeeZeeregular15" tools:text="@string/lbl_presence"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtExcel"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_20pxv"
                        android:layout_marginEnd="@dimen/_50pxh"
                        android:layout_marginStart="@dimen/_50pxh"
                        android:layout_marginTop="@dimen/_5pxv"
                        android:layout_width="wrap_content"
                        android:lineSpacingExtra="@dimen/_3pxh"
                        android:singleLine="true"
                        android:text="@{enseignantVM.enseignantModel.txtExcel}"
                        style="@style/txtABeeZeeregular12_1" tools:text="@string/lbl_excel"/>
                </LinearLayout>
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearColumndesktopOne"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
                    <ImageView android:id="@+id/imageDesktopOne"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_36pxh"
                        android:layout_marginEnd="@dimen/_34pxh"
                        android:layout_marginStart="@dimen/_34pxh"
                        android:layout_marginTop="@dimen/_21pxv"
                        android:layout_width="@dimen/_38pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_desktop_yellow_900"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_desktop_yellow_900"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtUploadCours"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_39pxv"
                        android:layout_marginEnd="@dimen/_33pxh"
                        android:layout_marginStart="@dimen/_34pxh"
                        android:layout_marginTop="@dimen/_20pxv"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_3pxh"
                        android:singleLine="true"
                        android:text="@{enseignantVM.enseignantModel.txtUploadCours}"
                        style="@style/txtABeeZeeregular15" tools:text="@string/lbl_upload_cours"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="end"
                android:id="@+id/linearRowlogout"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_40pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylecornerRadius">
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnLogout"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.81"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:paddingBottom="@dimen/_8pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_8pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_logout"
                    android:textAllCaps="false"
                    style="@style/btnGradientRounded" tools:text="@string/lbl_logout"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDetailProfile"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_87pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_weight="0.19"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{enseignantVM.enseignantModel.txtDetailProfile}"
                    style="@style/txtABeeZeeitalic15" tools:text="@string/lbl_detail_profile"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowhome"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_64pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylewhite_A701cornerRadius">
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearColumnhome"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginStart="@dimen/_45pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_weight="0.37"
                    android:layout_width="0dp"
                    android:orientation="vertical" style="@style/groupStyle">
                    <ImageView android:id="@+id/imageHome"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_22pxh"
                        android:layout_marginEnd="@dimen/_5pxh"
                        android:layout_marginStart="@dimen/_5pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_width="@dimen/_22pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_home"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_home"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtHomeOne"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_1pxh"
                        android:layout_marginStart="@dimen/_1pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{enseignantVM.enseignantModel.txtHomeOne}"
                        style="@style/txtPromptregular10" tools:text="@string/lbl_home"/>
                </LinearLayout>
                <ImageView android:id="@+id/imageIconssearch"
                    android:layout_height="@dimen/_18pxh"
                    android:layout_marginBottom="@dimen/_24pxv"
                    android:layout_marginStart="@dimen/_59pxh"
                    android:layout_marginTop="@dimen/_26pxv"
                    android:layout_width="@dimen/_18pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_iconssearch"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_iconssearch"/>
                <ImageButton
                    android:background="@drawable/rectangle_bg_bluegray_400_radius_10_085"
                    android:id="@+id/btnVectorStroke"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginBottom="@dimen/_23pxv"
                    android:layout_marginStart="@dimen/_65pxh"
                    android:layout_marginTop="@dimen/_25pxv"
                    android:layout_width="@dimen/_20pxh"
                    android:paddingHorizontal="@dimen/_5pxh"
                    android:paddingVertical="@dimen/_5pxv"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_iconsplayci" tools:ignore="ContentDescription"/>
                <ImageView android:id="@+id/imageIconsuser"
                    android:layout_height="@dimen/_18pxh"
                    android:layout_marginBottom="@dimen/_24pxv"
                    android:layout_marginEnd="@dimen/_50pxh"
                    android:layout_marginStart="@dimen/_67pxh"
                    android:layout_marginTop="@dimen/_26pxv"
                    android:layout_width="@dimen/_16pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_iconsuser"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_iconsuser"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
